tests/08-non-power-of-two.stderr
error: A BitfieldSpecifier with a non-power-of-2 number of variants must have the 'bits' attribute specified
  --> $DIR/08-non-power-of-two.rs:10:10
   |
11 | pub enum Bad {
   | ^^^
